--- a/package.json
+++ b/package.json
@@ -3,20 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/app-bridge-react": "^2.0.2",
+    "@shopify/app-bridge-utils": "^2.0.2",
+    "@shopify/koa-shopify-auth": "^4.1.4",
+    "@shopify/koa-shopify-webhooks": "^4.2.1",
+    "@shopify/polaris": "^7.0.0",
+    "@shopify/shopify-api": "^1.4.1",
+    "apollo-boost": "^0.4.9",
+    "dotenv": "^10.0.0",
+    "fs": "^0.0.1-security",
+    "graphql": "^15.6.1",
+    "isomorphic-fetch": "^3.0.0",
+    "koa": "^2.13.3",
+    "koa-router": "^10.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/koa": "^2.13.4",
+    "@types/koa-router": "^7.4.4",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.2.1",
     "typescript": "4.4.3"
   }
 }
